--- a/packages/theme/src/flex.scss
+++ b/packages/theme/src/flex.scss
@@ -1,4 +1,5 @@
 @use "./mixins/mixins.scss" as *;
+@use "sass:list";
 
 @include b(flex) {
   display: flex;
@@ -20,6 +21,14 @@
   @each $align in (flex-start, center, flex-end) {
     @include when(#{'align-' + $align}) {
       align-items: $align;
+    }
+  }
+
+  @each $gap in ((small, 8px), (middle, 16px), (large, 24px)) {
+    $value: list.nth($gap, 2);
+
+    @include when(#{'gap-' + list.nth($gap, 1)}) {
+      gap: $value;
     }
   }
 }
