--- a/packages/theme/src/radio.scss
+++ b/packages/theme/src/radio.scss
@@ -1,6 +1,11 @@
 @use "./mixins/mixins.scss" as *;
 
 @include b(radio) {
+  --y-radio-width: 16px;
+  --y-radio-checked-bg: var(--y-color-primary);
+}
+
+@include b(radio) {
   position: relative;
   cursor: pointer;
   display: inline-flex;
@@ -27,16 +32,37 @@
     @include m(inner) {
       box-sizing: border-box;
       position: relative;
-      inset-block-start: 0;
-      inset-inline-start: 0;
-      display: block;
-      width: 16px;
-      height: 16px;
-      border-color: #d9d9d9;
-      border-style: solid;
-      border-width: 1px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: var(--y-radio-width);
+      height: var(--y-radio-width);
+      border: 1px solid #d9d9d9;
       border-radius: 50%;
       transition: all 0.2s;
+
+      &::after {
+        box-sizing: border-box;
+        position: absolute;
+        display: block;
+        width: var(--y-radio-width);
+        height: var(--y-radio-width);
+        background-color: #fff;
+        border-radius: 50%;
+        transform: scale(0);
+        opacity: 0;
+        transition: all 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
+        content: "";
+      }
+
+      @include when(checked) {
+        background-color: var(--y-radio-checked-bg);
+
+        &::after {
+          transform: scale(0.375);
+          opacity: 1;
+        }
+      }
     }
   }
 }
