--- a/packages/theme/src/radio.scss
+++ b/packages/theme/src/radio.scss
@@ -1,4 +1,5 @@
 @use "./mixins/mixins.scss" as *;
+@use "./mixins/config.scss" as *;
 
 @include b(radio) {
   --y-radio-width: 16px;
@@ -70,5 +71,16 @@
 
   @include e(label) {
     padding: 0 8px;
+  }
+
+  @include when(disabled) {
+    cursor: not-allowed;
+
+    .#{$b + $element-separator + 'input' + $modifier-separator + 'inner'} {
+      cursor: not-allowed;
+    }
+    .#{$b + $element-separator + 'input' + $modifier-separator + 'original'} {
+      cursor: not-allowed; 
+    }
   }
 }
