--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -1,3 +1,7 @@
 @use "../mixins/set-color-level.scss" as *;
 @use "../mixins/config.scss" as *;
 
+$box-shadow-secondary: 0 6px 16px 0 rgb(0 0 0 / 8%),
+  0 3px 6px -4px rgb(0 0 0 / 12%),
+  0 9px 28px 8px rgb(0 0 0 / 5%)
+
