--- a/packages/theme/src/image.scss
+++ b/packages/theme/src/image.scss
@@ -5,4 +5,10 @@
   display: inline-block;
   max-width: 100%;
   max-height: 100%;
+
+  @include e(img) {
+    width: 100%;
+    height: auto;
+    vertical-align: middle;
+  }
 }
