fixed：利用useMergePropOrContext和父组件穿过的值

--- a/packages/theme/src/radio.scss
+++ b/packages/theme/src/radio.scss
@@ -71,6 +71,10 @@
 
   @include e(label) {
     padding: 0 8px;
+
+    @include when(disabled) {
+      color: var(--y-color-text-quaternary);
+    }
   }
 
   @include when(disabled) {
