--- a/packages/theme/src/mixins/utils.scss
+++ b/packages/theme/src/mixins/utils.scss
@@ -19,8 +19,8 @@
     top: 50%;
     left: 0;
     width: 100%;
-    height: 2px;
-    background-color: var(--y-color-border);
+    height: 1.5px;
+    background-color: var(--y-color-text-tertiary);
   }
 
   &::before {
@@ -29,6 +29,14 @@
 
   &::after {
     transform: rotate(-45deg);
+  }
+
+  &:hover {
+    background-color: var(--y-color-fill-secondary);
+
+    &::after, &::before {
+      background-color: var(--y-color-text);
+    }
   }
 }
 
