--- a/packages/theme/src/color-picker.scss
+++ b/packages/theme/src/color-picker.scss
@@ -3,17 +3,32 @@
 @include b(color-picker) {
   --color-picker-title-border-color: var(--y-color-border);
 
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   min-width: 32px;
   height: 32px;
-  border-radius: 6px;
-  border: 1px solid var(--color-picker-title-border-color);
-  cursor: pointer;
-  display: inline-flex;
   padding: 3px;
+  border: 1px solid var(--color-picker-title-border-color);
+
+  @include e(title) {
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: red;
+
+    @include m(color) {
+      display: block;
+      border-radius: inherit;
+    }
+  }
 
   @include e(content) {
     --y-color-picker-content-bg: var(--y-color-bg-elevated);
 
+    padding: 12px;
+    width: 260px;
     background-clip: padding-box;
     border-radius: 8px;
     box-shadow: 0 6px 16px 0 rgb(0 0 0 / 8%), 0 3px 6px -4px rgb(0 0 0 / 12%), 0 9px 28px 8px rgb(0 0 0 / 5%);  
@@ -23,10 +38,18 @@
 
 @include b(color-content) { 
   @include e(panel) {
-    width: 234px;
+    position: relative;
     height: 160px;
-    border-radius: inherit;
-    box-shadow: inset 0 0 1px 0 rgb(255 255 255 / 25%);
-    inset: 0;
+    border-radius: 4px;
+    overflow: hidden;
+
+    @include m(colors) {
+      position: absolute;
+      inset: 0;
+      box-sizing: border-box;
+      background-color: var(--y-color-primary);
+      box-shadow: inset 0 0 1px 0 var(--y-color-text-quaternary);
+      background-image: linear-gradient(0deg, rgb(0 0 0), transparent), linear-gradient(90deg, rgb(255 255 255), rgb(255 255 255 / 0%));
+    }
   }
 }
