--- a/packages/theme/src/color-picker.scss
+++ b/packages/theme/src/color-picker.scss
@@ -2,19 +2,30 @@
 
 @include b(color-picker) {
   --color-picker-title-border-color: var(--y-color-border);
+  --color-picker-title-hover-border-color: var(--y-color-primary);
 
   cursor: pointer;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   min-width: 32px;
   height: 32px;
   padding: 3px;
+  border-radius: 6px;
   border: 1px solid var(--color-picker-title-border-color);
+
+  &:hover {
+    border-color: var(--color-picker-title-hover-border-color);
+  }
+
+  @include when(active) {
+    border-color: var(--color-picker-title-hover-border-color);
+  }
 
   @include e(title) {
     height: 100%;
     width: 100%;
+    border-radius: inherit;
     box-sizing: border-box;
     background-color: red;
 
@@ -47,9 +58,52 @@
       position: absolute;
       inset: 0;
       box-sizing: border-box;
-      background-color: var(--y-color-primary);
       box-shadow: inset 0 0 1px 0 var(--y-color-text-quaternary);
-      background-image: linear-gradient(0deg, rgb(0 0 0), transparent), linear-gradient(90deg, rgb(255 255 255), rgb(255 255 255 / 0%));
     }
+
+    @include m(move) {
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      cursor: pointer;
+      box-sizing: border-box;
+      border: 2px solid var(--y-color-bg-elevated);
+    }
+  }
+
+  @include e(slider) {
+    margin: 12px 0;
+
+    @include m(block) {
+      width: 28px;
+      height: 28px;
+      border-radius: 4px;
+      background-color: red;
+    }
+  }
+}
+
+@include b(hue-slider) {
+  position: relative;
+  height: 8px;
+  border-radius: 4px;
+  width: 100%;
+
+  @include e(bar) {
+    position: absolute;
+    border-radius: inherit;
+  }
+
+  @include e(move) {
+    position: absolute;
+    top: -2px;
+    width: 12px;
+    height: 12px;
+    border: 2px solid var(--y-color-bg-elevated);
+    box-sizing: border-box;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: inset 0 0 1px 0 var(--y-color-text-quaternary),0 0 0 1px var(--y-color-fill-secondary);
   }
 }
