--- a/packages/theme/src/color-picker.scss
+++ b/packages/theme/src/color-picker.scss
@@ -105,3 +105,34 @@
     box-shadow: inset 0 0 1px 0 var(--y-color-text-quaternary),0 0 0 1px var(--y-color-fill-secondary);
   }
 }
+
+@include b(alpha-slider) {
+  position: relative;
+  height: 8px;
+  border-radius: 4px;
+  width: 100%;
+  background-color: #ccc; 
+  background-image: linear-gradient(45deg,#333 25%, transparent 25%), 
+    linear-gradient(135deg,#333 25%,transparent 25%),
+    linear-gradient(45deg,transparent 75%,#333 75%),
+    linear-gradient(135deg,transparent 75%,#333 75%);
+  background-size: 8px 8px;
+  background-position: 0 0, 4px 0, 4px -4px,0 4px;
+
+  @include e(bar) {
+    position: absolute;
+    border-radius: inherit;
+  }
+
+  @include e(move) {
+    position: absolute;
+    top: -2px;
+    width: 12px; 
+    height: 12px;
+    border: 2px solid var(--y-color-bg-elevated);
+    box-sizing: border-box;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: inset 0 0 1px 0 var(--y-color-text-quaternary),0 0 0 1px var(--y-color-fill-secondary);
+  }
+}
