--- a/packages/theme/src/color-picker.scss
+++ b/packages/theme/src/color-picker.scss
@@ -57,6 +57,7 @@
       inset: 0;
       box-sizing: border-box;
       box-shadow: inset 0 0 1px 0 var(--y-color-text-quaternary);
+      cursor: pointer;
     }
 
     @include m(move) {
@@ -98,12 +99,13 @@
 @include b(hue-slider) {
   position: relative;
   height: 8px;
-  border-radius: 4px;
+  border-radius: 4px; 
   width: 100%;
 
   @include e(bar) {
     position: absolute;
     border-radius: inherit;
+    cursor: pointer;
   }
 
   @include e(move) {
@@ -135,6 +137,7 @@
   @include e(bar) {
     position: absolute;
     border-radius: inherit;
+    cursor: pointer;
   }
 
   @include e(move) {
