--- a/packages/theme/src/color-picker.scss
+++ b/packages/theme/src/color-picker.scss
@@ -27,11 +27,36 @@
     width: 100%;
     border-radius: inherit;
     box-sizing: border-box;
-    background-color: red;
 
     @include m(color) {
       display: block;
       border-radius: inherit;
+      height: 100%; 
+      position: relative;
+      overflow: hidden;
+
+      &::after {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: #ccc; 
+        background-image: linear-gradient(45deg,#333 25%, transparent 25%), 
+          linear-gradient(135deg,#333 25%,transparent 25%),
+          linear-gradient(45deg,transparent 75%,#333 75%),
+          linear-gradient(135deg,transparent 75%,#333 75%);
+        background-size: 8px 8px;
+        background-position: 0 0, 4px 0, 4px -4px,0 4px;
+      }
+
+      &::before {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+        background-color: var(--y-color-picker-title-bg);
+      }
     }
   }
 
@@ -114,7 +139,7 @@
     width: 12px;
     height: 12px;
     border: 2px solid var(--y-color-bg-elevated);
-    box-sizing: border-box;
+    box-sizing: border-box; 
     border-radius: 50%;
     cursor: pointer;
     box-shadow: inset 0 0 1px 0 var(--y-color-text-quaternary),0 0 0 1px var(--y-color-fill-secondary);
@@ -124,7 +149,7 @@
 @include b(alpha-slider) {
   position: relative;
   height: 8px;
-  border-radius: 4px;
+  border-radius: 4px; 
   width: 100%;
   background-color: #ccc; 
   background-image: linear-gradient(45deg,#333 25%, transparent 25%), 
