fixed：修改select组件新增可以滑动

--- a/packages/theme/src/select.scss
+++ b/packages/theme/src/select.scss
@@ -30,6 +30,8 @@
   }
 
   @include e(list) {
+    max-height: 240px; 
+
     @include m(item) {
       padding: 5px 12px; 
       border-radius: 3px;
