--- a/packages/theme/src/flex.scss
+++ b/packages/theme/src/flex.scss
@@ -31,4 +31,12 @@
       gap: $value;
     }
   }
+
+  @include when(row-reverse) {
+    flex-direction: row-reverse;
+  }
+
+  @include when(column-reverse) {
+    flex-direction: column-reverse;
+  }
 }
