--- a/packages/theme/src/flex.scss
+++ b/packages/theme/src/flex.scss
@@ -39,4 +39,8 @@
   @include when(column-reverse) {
     flex-direction: column-reverse;
   }
+
+  @include when(inline) {
+    display: inline-block;
+  }
 }
